<resources>
    <string name="app_name">Notto</string>
    <string name="login_screen">Inicia sesión</string>
    <string name="register_screen">Regístrate</string>
    <string name="draw">Dibujo</string>
    <string name="note">Nota</string>
    <string name="user_screen">Perfil de usuario</string>
    <string name="notes">notas</string>
    <string name="canvas">Lienzo</string>
    <string name="usericon">Usuario</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="usermail">email</string>
    <string name="board">Tablón</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Accede</string>
    <string name="action_sign_in_short">Accede</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Login fallido"</string>
    <string name="or">o</string>
    <string name="createAccount">Regístrate</string>
    <string name="againPassword">Confirmar contraseña</string>
    <string name="signUp">Registrar</string>
    <string name="navigation_drawer_open">Abrir la barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar la barra de navegación</string>
    <string name="login">Inicia sesión</string>
    <string name="register">Regístrate</string>
    <string name="yourname">Tu nombre</string>
    <string name="youremail">Tu email</string>
    <string name="rePassword">Vuelve a escribir tu contraseña</string>
    <string name="backtologin">Volver al login</string>
    <string name="newnote">Nueva nota</string>
    <string name="newdraw">Nuevo dibujo</string>
    <string name="title_activity_login">Notto</string>
    <string name="toast_note_deleted">Nota borrada</string>
    <string name="toast_login_fail">Datos incorrectos o usuario no registrado</string>
    <string name="toast_email_used">El email ya está en uso</string>
    <string name="toast_password_notmatch">Las contraseñas no coinciden</string>
    <string name="title">Titulo</string>
    <string name="toast_edit_note">Editar nota</string>
    <string name="toast_edited_note">Nota editada</string>
    <string name="toast_saved_note">Nota guardada</string>
    <string name="toast_insertTitleContent">Por favor introduce un título y un contenido</string>
    <string name="toast_WIP">En construcción</string>
    <string name="error_putName">Introduzca nombre</string>
    <string name="error_putMail">Introduzca email</string>
    <string name="error_putPassword">Introduzca contraseña</string>
    <string name="error_validEmail">Email no válido</string>
    <string name="toast_validPassword">La contraseña debe contener al menos 8 caracteres</string>
    <string name="changeName">Cambiar nombre</string>
    <string name="changeMail">Cambiar email</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="newName">Nuevo nombre</string>
    <string name="newmail">Nuevo email</string>
    <string name="oldPass">Contraseña a cambiar</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="newRepass">Repita la nueva contraseña</string>
    <string name="usernameChanged">Nombre de usuario cambiado</string>
    <string name="usermailChanged">Email cambiado</string>
    <string name="wrongPass">Contraseña incorrecta</string>
    <string name="passwordChanged">Contraseña cambiada</string>
    <string name="toast_succesRegister">Registro realizado con éxito</string>

</resources>
