<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_board">

    <fragment
        android:id="@+id/fragment_board"
        android:name="com.fct.notto.View.Fragment_board"
        android:label="@string/app_name"
        tools:layout="@layout/board_fragment">
        <action
            android:id="@+id/action_fragment_board_to_fragment_canvas"
            app:destination="@id/fragment_canvas" />
        <action
            android:id="@+id/action_fragment_board_to_fragment_notes"
            app:destination="@id/fragment_notes" />
        <action
            android:id="@+id/action_fragment_board_to_fragment_user"
            app:destination="@id/fragment_user" />
        <action
            android:id="@+id/action_fragment_board_to_fragment_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragment_canvas"
        android:name="com.fct.notto.View.Fragment_canvas"
        android:label="@string/canvas"
        tools:layout="@layout/canvas_fragment" />
    <fragment
        android:id="@+id/fragment_notes"
        android:name="com.fct.notto.View.Fragment_notes"
        android:label="@string/note"
        tools:layout="@layout/notes_fragment">
        <action
            android:id="@+id/action_fragment_notes_to_fragment_board"
            app:destination="@id/fragment_board"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/fragment_login"
        android:name="com.fct.notto.View.Fragment_login"
        android:label="@string/login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/loginAction"
            app:destination="@id/fragment_board"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_fragment_login_to_fragment_register"
            app:destination="@id/fragment_register" />
    </fragment>
    <fragment
        android:id="@+id/fragment_register"
        android:name="com.fct.notto.View.Fragment_register"
        android:label="@string/register"
        tools:layout="@layout/register_fragment">
        <action
            android:id="@+id/action_fragment_register_to_fragment_login"
            app:destination="@id/fragment_login" />
    </fragment>
    <fragment
        android:id="@+id/fragment_user"
        android:name="com.fct.notto.View.Fragment_user"
        android:label="@string/user_screen"
        tools:layout="@layout/user_fragment">
        <action
            android:id="@+id/action_fragment_user_to_fragment_editUserName"
            app:destination="@id/fragment_editUserName" />
        <action
            android:id="@+id/action_fragment_user_to_fragment_editUserPass"
            app:destination="@id/fragment_editUserPass" />
    </fragment>
    <fragment
        android:id="@+id/fragment_editUserName"
        android:name="com.fct.notto.View.Fragment_editUserName"
        android:label="@string/changeName"
        tools:layout="@layout/edit_username_fragment">
        <action
            android:id="@+id/action_fragment_editUserName_to_fragment_user"
            app:destination="@id/fragment_user"
            app:popUpTo="@id/fragment_board" />
    </fragment>
    <fragment
        android:id="@+id/fragment_editUserPass"
        android:name="com.fct.notto.View.Fragment_editUserPass"
        android:label="@string/changePass"
        tools:layout="@layout/edit_userpassword_fragment">
        <action
            android:id="@+id/action_fragment_editUserPass_to_fragment_user"
            app:destination="@id/fragment_user"
            app:popUpTo="@id/fragment_board" />
    </fragment>
    <action
        android:id="@+id/action_global_fragment_login"
        app:destination="@id/fragment_login"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />
</navigation>