<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/yourname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/youremail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/rePassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_custom"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or" />

    <Button
        android:id="@+id/btn_backtologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_custom"
        android:text="@string/backtologin"
        android:textColor="@android:color/white" />


</LinearLayout>