<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="361dp"
        android:layout_above="@id/et_email"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="-80dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon1" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:textSize="15sp"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/login"
        android:background="@drawable/btn_custom"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textOr"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/createAccount"
        android:textColor="@android:color/white" />

</RelativeLayout>